; ModuleID = '/home/carl/AnghaBench/git/extr_trailer.c_same_value.c'
source_filename = "/home/carl/AnghaBench/git/extr_trailer.c_same_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trailer_item = type { i32 }
%struct.arg_item = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.trailer_item*, %struct.arg_item*)* @same_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @same_value(%struct.trailer_item* %0, %struct.arg_item* %1) #0 {
  %3 = alloca %struct.trailer_item*, align 8
  %4 = alloca %struct.arg_item*, align 8
  store %struct.trailer_item* %0, %struct.trailer_item** %3, align 8
  store %struct.arg_item* %1, %struct.arg_item** %4, align 8
  %5 = load %struct.trailer_item*, %struct.trailer_item** %3, align 8
  %6 = getelementptr inbounds %struct.trailer_item, %struct.trailer_item* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.arg_item*, %struct.arg_item** %4, align 8
  %9 = getelementptr inbounds %struct.arg_item, %struct.arg_item* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @strcasecmp(i32 %7, i32 %10)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local i32 @strcasecmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
